Fix Bugs on Get in Touch Section
1.Fix the size of Form for contact us.
2.Fix the images issues which is not showing earlier due to wrong url path for images.
3.Fix the side block of address information like resizing the block, removing extra lines.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1409,6 +1409,7 @@ iframe {
   display: flex;
   flex-direction: row;
   gap: 0;
+  margin-bottom: 5rem;
 }
 .contact {
   margin-top: 50px;
@@ -1445,7 +1446,7 @@ iframe {
 }
 .contact-container {
   padding-right: 20px;
-  width: 60% !important;
+  width: 81% !important;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1455,6 +1456,8 @@ iframe {
   /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); */
   font-family: Montserrat;
   transition: background-color 0.3s, border-color 0.3s, color 0.3s;
+  position: relative;
+  left: 9rem;
 }
 
 .contact-form {
@@ -1567,15 +1570,15 @@ iframe {
   background-color: transparent;
 }
 .contact-card {
-  margin-top: 50px;
+  margin-top: -14rem;
   padding: 30px;
   background-color: transparent;
   border: 1px solid #c36969 !important;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   /* border-radius: var(--radius-5); */
-
-  height: 600px;
+  width: 31rem;
+  height: 36rem;
 }
 
 .contact-card .card-title {
@@ -4379,4 +4382,11 @@ body.dark-mode .h3 {
   height: 52px;
   width: 52px;
   margin-top: -18px;
+}
+
+.g_i_t{
+  margin-top: 5rem;
+  font-size: 3rem;
+  position: relative;
+  left: 10rem;
 }
